--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,8 @@ permalink: /404.html
 author_profile: false
 ---
 
-요청하신 페이지를 찾을 수 없습니다.
+엥? 그런 글은 여기 없는데요?  
+Oops! There is not information you want to search!
 
 <script>
   var GOOG_FIXURL_LANG = 'en';
