--- a/_posts/learn/robot-laboratory-3/2021-07-10-fft.md
+++ b/_posts/learn/robot-laboratory-3/2021-07-10-fft.md
@@ -33,6 +33,16 @@ use_math: true
 <img src="\assets\images\learn\robot-laboratory-3\2021-07-10-robot-laboratory-3\img1.png" width="70%" height="70%">
 </center>
 
+<center>
+<span style=
+"font-size:70%;
+color:gray">
+Source: https://moonhow.tistory.com/14
+</span>
+</center>
+
+<br/>
+
 위 이미지는 각 사각파, 삼각파를 삼각함수의 급수로 표현한 것이다. 이런 식으로 많은 주기함수를 삼각함수의 급수로 표현할 수 있다.
 
 <br/>
@@ -49,7 +59,16 @@ use_math: true
 <center>
 <img src="\assets\images\learn\robot-laboratory-3\2021-07-10-robot-laboratory-3\img2.png">
 </center>
-<br/>
+
+<center>
+<span style=
+"font-size:70%;
+color:gray">
+Source: https://dev.to/trekhleb/playing-with-discrete-fourier-transform-algorithm-in-javascript-53n5
+</span>
+</center>
+
+<br/>  
 
 왼쪽 빨간색 그래프가 우리가 분석하고 싶은 신호이다. 그런데 우리는 이 신호를 푸리에 급수를 이용해 삼각함수들의 합으로 표현이 가능하므로 삼각함수들로 분리를 한다. 그런 다음 시간에 대해 보이는 빨간색 신호를 주파수에 대해 보기 위해 푸리에 변환을 진행하면 파란색 그래프처럼 결과가 나오게 된다. 
 
