--- a/_posts/projects/mi-arm/2021-07-20-mi-arm-1.md
+++ b/_posts/projects/mi-arm/2021-07-20-mi-arm-1.md
@@ -5,16 +5,107 @@ header:
     teaser: \assets\images\learn\robot-laboratory-3\2021-07-10-robot-laboratory-3\img2.png
 
 categories: 
-    - MI-ARM
+    - Projects
 tage: 
     - MI-ARM
     - personal Project
     - PAM
-last_modified_at: 2021-07-10t01:31-15:00
+last_modified_at: 2021-07-20t01:31-15:00
 comments: true
 toc: true
 toc_sticky: true
 use_math: true
 ---
 
-test test
+<br/>
+
+>Pneumatic Artificial Muscles의 줄임말인 PAM을 구현해 본 작품이다. 해당 프로젝트에서는 공압 시스템을 필요로 하여 이에 대한 환경 구축이 필요했는데, 비용이 많이 들어간다는 문제점이 있었다. 이를 해결하기 위해 PAM을 구동하는 것에 있어 제일 근본적인 구동기인 에어 컴프레셔를 직접 제작하여 문제를 해결하였다.  
+>또한 릴레이를 이용하여 공기의 흐름을 조절함으로써 PAM의 팽창과 수축으로 실제 인간의 근육과 같은 움직임을 구현하였다.  
+
+<br/>
+
+>실제 제작 기간: 2020년 08월 ~ 11월
+
+<br/><br/>
+
+# 1. 작품 선정
+
+사실 17년도 2-1학기 때 다이나믹셀을 이용한 로봇 팔을 제작하려다 실패한 경험이 있다. 그때 당시 6축 로봇 팔을 생각하고 있었는데, 당연히 DH-Parameter나 Jacobian을 풀어서 만드는 것이 아닌, MPU6050이라는 자이로-가속도 센서를 로봇 팔의 링크에 해당하는 팔 부분에 달아서 팔 모션을 단순히 따라가는, 살짝 편법적으로 만드려고 했다. 그러나 처음 맛보는 I2C통신의 매운 맛과 로봇 설계에 대한 본인의 능력 한계를 깨달아, 너무 어려운 주제 말고 적당한 주제를 찾아보기로 했다.
+처음에는 좀 간단한 로봇 팔 관련한 작품을 만드려 하다가, 예전부터 눈여겨 보았던 flxible robot과 접목할 수 있을까 고민하면서 이것저것 찾아봤었다. 그러다 "인공근육"이라는 주제를 알게 되었는데, 영상을 좀 더 알아보니까 이를 구현해보면 재미있을 것 같아 실제로 제작해 보기로 했다. 
+
+<br/><br/><br/>
+
+# 2. What is PAM?
+ 
+[Wiki에서 설명하는 PAM](https://en.wikipedia.org/wiki/Pneumatic_artificial_muscles)  
+
+<br/>
+
+<center>
+<img src="\assets\images\projects\2021-07-20-mi-arm-1\img1.jpg" width="70%" height="70%">
+</center>  
+
+<center>
+<span style=
+"font-size:70%;
+color:gray">
+Source: https://www.researchgate.net/figure/A-Pleated-Pneumatic-Artificial-Muscle-PPAM-shown-for-three-different-values-of_fig6_220122337
+</span>
+</center>
+
+<br/>
+
+"Pneumatic Artificial Muscles"의 약자로, 공압을 이용한 인공근육이라는 의미이다. 위 사진과 같은 형태의 인공근육은 1950년대 Mckibben에 의해 고안되었으며, 주로 고무같이 팽창 및 수축이 가능한 재질과 그 위에 막을 씌우는 형식으로 제작하며 공압을 이용하여 움직임을 구현한다. 위 링크를 타고 들어가면 자세한 설명이 적혀있지만, 간략히 정리하면 다음과 같다.  
+
+* PAM의 장점  
+1. **가벼움:** 맴브레인(Membrane) 소재, 즉 일종의 막 같은 재질로 제작되기에 가볍다.  
+2. **상호작용:** 일반 모터와 달리 구동기가 유연하여 이동경로에 사람이 있어도 사람의 힘으로 진행을 멈추게 할 수 있다.  
+3. **생명공학적:** 기존 실린터 구동기보다 덜 비선형적이고 인간의 근육과 같이 움직인다.
+4. **안전:** 구동기가 손상이 되면 공압을 유지할 수 없어 그대로 작동을 멈춰버리므로 오작동에 의한 2차 피해 위험이 크게 감소한다.
+
+그러나 작품을 만들면서 몇 가지의 단점도 존재했는데, 다음과 같다.  
+
+* PAM의 단점
+1. **소음:** 공압 시스템을 사용하기에 에어 컴프레셔가 필수로 사용되는데, 해당 장비는 사용 시 소음이 함께 동반된다.  
+2. **비선형:** 기존 실린더 구동기보다 덜 비선형적이라 하더라도, 결국에는 "비선형 모델"이다. 보통의 전자기 모터보다 제어하는 것이 더 힘들다. 
+3. **환경변수:** PAM 시스템의 원천이 "공기"인데 이 공기는 기온, 습도, 기압 등의 변수가 많아 하나의 설정값으로 다양한 환경에서 PAM 시스템을 사용하기 힘들다.  
+
+
+이러한 점 때문에 공압 시스템의 경우는 공장의 클린룸 같이 항상 온도 등을 유지할 수 있는 곳에서 많이 사용되는 것 같다.  
+
+<br/><br/><br/>
+
+# 3. Pneumatic System
+
+위 PAM 항목에서 설명했듯이, 해당 작품은 공압을 이용해야 하기에 에어 컴프레셔를 동반한 시스템을 구축해야 한다. 통상적으로 많이 쓰이는 공압 시스템은 다음과 같다.  
+
+<center>
+<img src="\assets\images\projects\2021-07-20-mi-arm-1\img2.gif" width="100%" height="100%">
+</center>  
+
+<center>
+<span style=
+"font-size:70%;
+color:gray">
+Source: https://www.smckorea.co.kr/homepage/ver3.5/technical/composition.asp
+</span>
+</center>
+
+<br/>
+
+결론부터 말하면 해당 작품에서는 비용적인 부담 때문에 완벽히 구축하지는 않고, 단순히 PAM을 구현하는 것에 초점을 맞추었다.  
+해당 시스템 이미지의 출처 사이트로 가면 설명이 자세히 되어 있으므로 간략히 요약만 하겠다.  
+
+* **컴프레셔**: 공기를 응축하기 위한 장치. 해당 시스템 구동에 있어 필수적이다.  
+* **청정화기기**: 공기를 빨아들여 시스템을 운용하기에 공기 중의 먼지/유분/수분 등을 걸러낸다. 보통 클린룸에서 많이 쓰게 된다. 
+* **공기압보조기기**: 회로의 "레귤레이터"와 흡사한 장치이다. 구동기에 항상 일정한 공기압을 주입하게 해 준다.  
+* **방향제어기기**: 공기의 흐름을 조종한다. 보통 솔레노이드 벨브를 열고 닫으면서 구동기의 공압을 제어한다. 솔레노이드 벨브는 릴레이로 작동시킨다.  
+* **구동기기**: 실제로 움직이게 될 부분이다. 현장에서는 실린터 형태의 구동기를 많이 사용하지만, 해당 프로젝트에서는 PAM을 쓸 것이다.  
+
+이번 프로젝트에서 사용할 파트는 "컴프레셔", "방향제어기기", 그리고 "구동기기"이다. 구동기기는 직접 제작을 해야 할 것이고, 방향제어기기의 경우 릴레이와 솔레노이드 벨브가 필요하다. 그리고 예전부터 에어 컴프레셔같은 장비를 만들어 보고 싶어서 비용 문제도 있겠다, 직접 제작하기로 했다.  
+
+그런데 바로 구매하기가 힘든 것이, 직접 만들게 될 PAM이 어느 정도의 공압을 공급해야 부풀기 시작하는지와 해당 구동기의 내압강도/항복강도를 모르기 때문이다. 해당 작품을 진행하기 위해서는 먼저 인공근육을 제작하여 성능 테스트가 우선이었다.  
+
+그런데 인공근육을 만들기 전에 구동기에 공압을 주입해 줄 에어 컴프레셔를 만드는 것이 우선이었다. 갈 길이 멀지만, 차근차근 알아보고 만들어 보기로 했다. 확실히 로봇은 돈이 많이 든다는 말이 괜히 있는 게 아닌 것 같다.  
+
+<br/><br/><br/>
