--- a/_posts/projects/mi-arm/2021-07-20-mi-arm-1.md
+++ b/_posts/projects/mi-arm/2021-07-20-mi-arm-1.md
@@ -6,9 +6,9 @@ header:
 
 categories: 
     - Projects
-tage: 
+tags: 
     - MI-ARM
-    - personal Project
+    - personal Projects
     - PAM
 last_modified_at: 2021-07-20t01:31-15:00
 comments: true
