--- a/_posts/learn/robot-laboratory-3/2021-07-10-fft.md
+++ b/_posts/learn/robot-laboratory-3/2021-07-10-fft.md
@@ -6,7 +6,7 @@ header:
 
 categories: 
     - Robot Laboratory 3
-tage: 
+tags: 
     - Robot Laboratory 3
     - FFT
 last_modified_at: 2021-07-10t01:31-15:00
