--- a/_posts/projects/mi-arm/2021-07-20-mi-arm-1.md
+++ b/_posts/projects/mi-arm/2021-07-20-mi-arm-1.md
@@ -1,6 +1,6 @@
 ---
 title: "[Project: MI-ARM] 1. Preparing"
-excerpt: "I am ready to make PAM"
+excerpt: "Investigating about PAM system"
 header: 
     teaser: \assets\images\learn\robot-laboratory-3\2021-07-10-robot-laboratory-3\img2.png
 
